deploiement 1ere version